# zylaxion

./: .codespellrc  .gitignore  .yamllint  BRANDING.md  CHANGELOG.md  Cargo.toml  README.md  RULES.md  TRADEMARK.md  build.sh  config.toml  install.sh  rust-toolchain.toml  uninstall.sh  version-to
.github/: FUNDING.yml
.github/workflows/: ci.yml  maintenance.yml  release.yml
assets/: zylaxion.service
crates/zactrix-engine/: Cargo.toml
crates/zactrix-engine/src/: lib.rs  pool.rs  voice.rs
crates/zactrix-profiles/: Cargo.toml
crates/zactrix-profiles/examples/: housing_sanity.rs  micro_randomization_sanity.rs
crates/zactrix-profiles/src/: lib.rs  mechanical.rs  tpt.rs
crates/zylaxion/: Cargo.toml  build.rs
crates/zylaxion-core/: Cargo.toml
crates/zylaxion-core/examples/: zylaxion_live.rs
crates/zylaxion-core/src/: lib.rs
crates/zylaxion-input/: Cargo.toml
crates/zylaxion-input/examples/: listen_keys.rs
crates/zylaxion-input/src/: lib.rs
crates/zylaxion-output/: Cargo.toml
crates/zylaxion-output/examples/: realtime_click.rs
crates/zylaxion-output/src/: lib.rs  pipewire_sink.rs
crates/zylaxion/src/: cli.rs  config.rs  error_format.rs  instance_lock.rs  main.rs  pathguard.rs  profile.rs  signals.rs
crates/zylaxion/src/commands/: daemon.rs  info.rs  mod.rs  update.rs
crates/zylaxion/src/daemon/: ipc.rs  mod.rs
docs/: CHANGELOG-v6.0.0.md  ROADMAP.md  RULES.md  VERIFY_RELEASE.md  audit-v6.0.0-evidence.md  audit-v6.0.0.md  release-readiness-v6.0.0.md  trademark.md
profiles/: classic.toml  elegant.toml  studio.toml  technical.toml  whisper.toml
scripts/: build.sh  install.sh  uninstall.sh  version-to  version-to.sh
