[workspace]
members = [
    "crates/zactrix-engine",
    "crates/zactrix-profiles",
    "crates/zylaxion-output",
    "crates/zylaxion-input",
    "crates/zylaxion-core",
    "crates/zylaxion",
]
resolver = "2"

[workspace.package]
version = "6.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["rezky_nightky (oxyzenQ)"]
repository = "https://github.com/oxyzenQ/zylaxion"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = "thin"
codegen-units = 1
panic = "unwind"
overflow-checks = false
incremental = false
