[package]
name = "zactrix-profiles"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Acoustic profile definitions and DSP models for the Zactrix engine"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"