[package]
name = "zylaxion-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Orchestrator that wires input, engine, and output for the Zylaxion keyboard acoustic engine"

[dependencies]
zactrix-engine = { path = "../zactrix-engine" }
zactrix-profiles = { path = "../zactrix-profiles" }
zylaxion-output = { path = "../zylaxion-output" }
zylaxion-input = { path = "../zylaxion-input" }
crossbeam-channel = "0.5"
ringbuf = "0.4"
arc-swap = "1.7"
# v10.2.0 (dragonzen audit S4): used by the orchestrator heartbeat
# log (debug! at 60s, warn! at 5min of input inactivity).
log = "0.4"