[package]
name = "zylaxion-output"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Real-time audio output for the Zylaxion engine via cpal"

[dependencies]
zactrix-engine = { path = "../zactrix-engine" }
zactrix-profiles = { path = "../zactrix-profiles" }
cpal = "0.15"
ringbuf = "0.4"