[package]
name = "zylaxion"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Real-time mechanical keyboard acoustic synthesizer for Linux"

[dependencies]
zylaxion-core = { path = "../zylaxion-core" }
zylaxion-input = { path = "../zylaxion-input" }
zylaxion-output = { path = "../zylaxion-output" }
zactrix-engine = { path = "../zactrix-engine" }
zactrix-profiles = { path = "../zactrix-profiles" }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["signal", "process", "user"] }
cpal = "0.15"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"