[package]
name = "zylaxion"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Real-time mechanical keyboard acoustic synthesizer for Linux"
build = "build.rs"

[dependencies]
zylaxion-core = { path = "../zylaxion-core" }
zylaxion-input = { path = "../zylaxion-input" }
zylaxion-output = { path = "../zylaxion-output" }
zactrix-engine = { path = "../zactrix-engine" }
zactrix-profiles = { path = "../zactrix-profiles" }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["signal", "process", "user", "fs"] }
cpal = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arc-swap = "1.7"
toml = "0.8"
signal-hook = "0.3"
# libc is used for `umask(2)` in `daemon::ipc::create_listener` to
# guarantee the IPC socket file is created with mode 0o600.
libc = "0.2"